frontend/test/should_fail/computations_no_proc.grg
foo()
{
	return;
}

bar() : int
{
	foo();
	return(42);
}
